5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1637_1054.log
== TEST (2019-04-09 11:24:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# 
x = float(input("variavel x: "))
y = float(input("variavel y: "))

if(2x + y == 3):
	print("ponto pertence a reta")

else:
	  print("ponto nao pertence a reta")

-- ERROR:
File "XXXX", line 7
    if(2x + y == 3):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:25:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# 
x = float(input("variavel x: "))
y = float(input("variavel y: "))

if(2x + y = 3):
	print("ponto pertence a reta")

else:
	  print("ponto nao pertence a reta")

-- ERROR:
File "XXXX", line 7
    if(2x + y = 3):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:25:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# 
x = float(input("variavel x: "))
y = float(input("variavel y: "))

if(2*x + y = 3):
	print("ponto pertence a reta")

else:
	  print("ponto nao pertence a reta")

-- ERROR:
File "XXXX", line 7
    if(2*x + y = 3):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:25:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# 
x = float(input("variavel x: "))
y = float(input("variavel y: "))

if(2*x + y == 3):
	print("ponto pertence a reta")

else:
	  print("ponto nao pertence a reta")

-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:25:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# 
x = float(input("variavel x: "))
y = float(input("variavel y: "))

if(2*x + y == 3):
	print("ponto pertence a reta")

else:
	  print("ponto nao pertence a reta")

-- EXECUTION TIME:
0.192445
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
